--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             });
         });
         </script>
-        
+
         <style>
         body {margin: 0; background-color: #F5F5F5;}
         li {list-style-type: none;}
@@ -55,14 +55,11 @@
             #doc, #music, #youtube {width: calc(100% - 40px);margin: 20px auto;}
             #profile {width: calc(100% - 40px);}
             img {max-width: 100%; height: auto;}
-            table {
-        font-size: 12px; /* 더 작은 화면 크기에 대비하여 텍스트 크기 조정 */
-    }
-
-    th, td {
-        padding: 6px 10px; /* 더 작은 화면 크기에 대비하여 셀 크기 조정 */
-    }
+            table {font-size: 12px;}
+            th, td {padding: 6px 10px;}
         }
+
+
 
         </style>
     </head>
@@ -272,8 +269,6 @@
             <div class="title">플레이리스트</div>
             <table id="music" border="1">
                 <tr>
-                    <th>Rothy</th>
-                    <td>Stars</td>
                     <th>QWER </th>
                     <td>고민중독</td>
                     <th>백아</th>
@@ -283,8 +278,6 @@
                     <td>비도 오고 그래서</td><td>헤픈 우연</td>
                 </tr>
                 <tr>
-                    <th>딘</th>
-                    <td>instagram</td>
                     <th>DAY6</th>
                     <td>예뻤어</td>
                     <td>한 페이지가 될 수 있게</td>
@@ -295,8 +288,6 @@
                     <td>삐삐</td>
                 </tr>
                 <tr>
-                    <th>혁오</th>
-                    <td>위잉위잉</td>
                     <th>New Jeans</th>
                     <td>Attention</td>
                     <td>Ditto</td>
@@ -315,6 +306,14 @@
                     <td>Poppy</td>
                     <td>Bubble</td>
                     <td>ASAP</td>
+                </tr>
+                <tr>
+                    <th>Rothy</th>
+                    <td>Stars</td>
+                    <th>딘</th>
+                    <td>instagram</td>
+                    <th>혁오</th>
+                    <td>위잉위잉</td>
                     <th>벡아연</th>
                     <td>이럴거면 그러지말지</td>
                 </tr>
