--- a/index.html
+++ b/index.html
@@ -52,15 +52,13 @@
 
         @media (max-width: 768px) {
             .container, .index, .box {width: calc(100% - 40px);}
-            #doc, #music, #youtube {width: calc(100% - 40px);margin: 20px auto;}
+            #doc, #music, #youtube {width: calc(100% - 40px); margin: 20px auto;}
             #profile {width: calc(100% - 40px);}
             img {max-width: 100%; height: auto;}
             table {font-size: 12px;}
             th, td {padding: 6px 10px;}
+            #music th,#music td {display: block;}
         }
-
-
-
         </style>
     </head>
     <body>
@@ -275,7 +273,8 @@
                     <td>첫사랑</td>
                     <th>Heize</th>
                     <td>And July</td>
-                    <td>비도 오고 그래서</td><td>헤픈 우연</td>
+                    <td>비도 오고 그래서</td>
+                    <td>헤픈 우연</td>
                 </tr>
                 <tr>
                     <th>DAY6</th>
