--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         @media (max-width: 768px) {
             .container, .index, .box {width: calc(100% - 40px);}
             #doc, #music, #youtube {width: calc(100% - 40px); margin: 20px auto;}
-            #music,#youtube {display: none;}
+            #youtube {display: block;}
             #profile {width: calc(100% - 40px);}
             img {max-width: 100%; height: auto;}
             table {font-size: 12px;}
